fix: set project-card overflow to hidden

--- a/src/style.css
+++ b/src/style.css
@@ -41,6 +41,8 @@ body {
     font-size: 1.5rem;
     text-align: center;
     font-weight: bold;
+    overflow: hidden;
+    padding: 0 0.5rem;
 }
 
 #new-project-button {
